# mcp-intent-sentinel

./: .gitignore  LICENSE  LIMITATIONS.md  README.md  ROADMAP.md  pyproject.toml
eval/: README.md  __init__.py  registry.py  run.py
eval/labeled/: README.md  bootstrap.py  labels.json  labels_candidates.json  needs_review.json  propose_candidates.py  run.py
eval/labeled/results/v0.1.13/: confusion.json  confusion.md
eval/labeled/results/v0.1.15/: confusion.json  confusion.md
eval/labeled/results/v0.1.18/: confusion.json  confusion.md
eval/labeled/results/v0.1.7/: confusion.json  confusion.md
eval/llm_fallback/: README.md  analyzer.py  pilot.py
eval/llm_fallback/results/v0.1.10/: pilot.json  pilot.md  summary.json
eval/llm_fallback/results/v0.1.17-union-smoke/: pilot.json  pilot.md  summary.json
eval/llm_fallback/results/v0.1.8/: pilot.json  pilot.md  summary.json
eval/model_compliance/: FINDING.md  LIMITATIONS.md  README.md  bypass_classified.txt  classify_bypass.py  judge.py  prompts.py  rejudge.py  run.py  runner.py  smoke.py
eval/model_compliance/results/v0.1.5-full/: report.md  run.json  summary.json
eval/model_compliance/results/v0.1.6-rejudged/: delta.md  report.md  run.json  summary.json
eval/results/v0.1.12/: report.md  run.json
eval/results/v0.1.13/: report.md  run.json
eval/results/v0.1.16/: report.md  run.json
eval/results/v0.1.3/: report.md  run.json
eval/results/v0.1.4/: report.md  run.json
eval/results/v0.1.5/: report.md  run.json
eval/results/v0.1.7/: report.md  run.json
mis/: __init__.py  __main__.py  cli.py  engine.py  findings.py
mis/analyzers/: __init__.py  js.py  js_ast.py  manifest.py  python.py  types.py
mis/classifier/: __init__.py  intent.py
mis/extractors/: __init__.py  base.py
mis/report/: __init__.py  render.py
tests/: test_classifier.py  test_corpus.py  test_extractor.py  test_js_analyzer.py  test_js_ast_analyzer.py  test_manifest_analyzer.py  test_python_analyzer.py
tests/corpus/benign/calc_python/: pyproject.toml  server.py
tests/corpus/malicious/legit_api_client_host_claim_downgrade/: pyproject.toml  server.py
(+40 files in other folders)
